// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders token list -- with get error 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/configuration"
              role="option"
            >
              <i
                aria-hidden="true"
                class="settings icon"
              />
              Configuration
            </a>
            <a
              aria-current="page"
              class="item active"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
            <a
              class="item"
              href="/users"
              role="option"
            >
              <i
                aria-hidden="true"
                class="users icon"
              />
              Users
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <h3
        class="ui header"
      >
        Manage Developer Download Tokens
      </h3>
      <div
        class="ui basic segment"
      >
        Developer download tokens allow download of any file using the
         
        <code>
          ?token=
        </code>
         query parameter or passed in the Authorization header with a 
        <code>
          Token
        </code>
         prefix.
        <div
          class="ui icon negative message"
        >
          <i
            aria-hidden="true"
            class="warning circle icon"
          />
          <div
            class="content"
          >
            <div
              class="header"
            >
              Error
            </div>
            <p>
              Network error: Failed to fetch tokens information
            </p>
          </div>
        </div>
      </div>
      <div
        class="ui basic segment"
      >
        <h3
          class="ui header"
        >
          Make a new token
        </h3>
        <div
          class="ui segment"
        >
          <form
            class="ui form"
          >
            <div
              class="field"
            >
              <label>
                Name:
                <input
                  data-testid="token-name-input"
                  focus="false"
                  name="name"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <button
              class="ui disabled button"
              data-testid="token-create"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              Create
            </button>
            <div
              class="ui hidden negative message"
            />
          </form>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders token list correctly - displaying look & hidden look 1`] = `
<body>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <h3
        class="ui header"
      >
        Manage Developer Download Tokens
      </h3>
      <div
        class="ui basic segment"
      >
        Developer download tokens allow download of any file using the
         
        <code>
          ?token=
        </code>
         query parameter or passed in the Authorization header with a 
        <code>
          Token
        </code>
         prefix.
        <div
          class="ui warning message"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              Keep these tokens private!
            </div>
            <p>
              They will not be displayed again after being created.
            </p>
          </div>
        </div>
      </div>
      <div
        class="ui basic segment"
      >
        <div
          class="ui basic very padded segment"
        >
          <div
            class="ui active transition visible inverted dimmer"
            style="display: flex;"
          >
            <div
              class="content"
            >
              <div
                class="ui inverted text loader"
              >
                Loading tokens...
              </div>
            </div>
          </div>
        </div>
        <h3
          class="ui header"
        >
          Make a new token
        </h3>
        <div
          class="ui segment"
        >
          <form
            class="ui form"
          >
            <div
              class="field"
            >
              <label>
                Name:
                <input
                  data-testid="token-name-input"
                  focus="false"
                  name="name"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <button
              class="ui disabled button"
              data-testid="token-create"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              Create
            </button>
            <div
              class="ui hidden negative message"
            />
          </form>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders token list correctly - displaying look & hidden look 2`] = `
<body>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/configuration"
              role="option"
            >
              <i
                aria-hidden="true"
                class="settings icon"
              />
              Configuration
            </a>
            <a
              aria-current="page"
              class="item active"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
            <a
              class="item"
              href="/users"
              role="option"
            >
              <i
                aria-hidden="true"
                class="users icon"
              />
              Users
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <h3
        class="ui header"
      >
        Manage Developer Download Tokens
      </h3>
      <div
        class="ui basic segment"
      >
        Developer download tokens allow download of any file using the
         
        <code>
          ?token=
        </code>
         query parameter or passed in the Authorization header with a 
        <code>
          Token
        </code>
         prefix.
        <div
          class="ui warning message"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              Keep these tokens private!
            </div>
            <p>
              They will not be displayed again after being created.
            </p>
          </div>
        </div>
      </div>
      <div
        class="ui basic segment"
      >
        <div
          class="ui relaxed list"
          role="list"
        >
          <div
            class="item"
            role="listitem"
          >
            <img
              alt="John"
              class="ui avatar image"
              src="https://docs.atlassian.com/aui/8.3.1/docs/images/avatar-person.svg"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                my token 1
              </div>
              Created by 
              John
               
              <time
                datetime="2019-06-13T12:05:39.381Z"
                title="13 Jun 2019"
              >
                2 months from now
              </time>
            </div>
            <div
              class="right floated content"
            >
              <div
                class="ui action input"
              >
                <input
                  readonly=""
                  type="text"
                  value="blahtestingtokenstringhere"
                />
                <button
                  class="ui icon negative button"
                  data-testid="delete-token-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="item"
            role="listitem"
          >
            <img
              alt="John"
              class="ui avatar image"
              src="https://docs.atlassian.com/aui/8.3.1/docs/images/avatar-person.svg"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                my token 2
              </div>
              Created by 
              John
               
              <time
                datetime="2019-06-13T12:05:39.381Z"
                title="13 Jun 2019"
              >
                2 months from now
              </time>
            </div>
            <div
              class="right floated content"
            >
              <div
                class="ui action input"
              >
                <input
                  readonly=""
                  type="text"
                  value="test***********************"
                />
                <button
                  class="ui icon negative button"
                  data-testid="delete-token-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="item"
            role="listitem"
          >
            <img
              alt="unknown"
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                my token 3
              </div>
              <time
                datetime="2019-06-13T12:05:39.381Z"
                title="13 Jun 2019"
              >
                2 months from now
              </time>
            </div>
            <div
              class="right floated content"
            >
              <div
                class="ui action input"
              >
                <input
                  readonly=""
                  type="text"
                  value="test***********************"
                />
                <button
                  class="ui icon negative button"
                  data-testid="delete-token-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <h3
          class="ui header"
        >
          Make a new token
        </h3>
        <div
          class="ui segment"
        >
          <form
            class="ui form"
          >
            <div
              class="field"
            >
              <label>
                Name:
                <input
                  data-testid="token-name-input"
                  focus="false"
                  name="name"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <button
              class="ui disabled button"
              data-testid="token-create"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              Create
            </button>
            <div
              class="ui hidden negative message"
            />
          </form>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders token list correctly - displaying look & hidden look 3`] = `
<body>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/configuration"
              role="option"
            >
              <i
                aria-hidden="true"
                class="settings icon"
              />
              Configuration
            </a>
            <a
              aria-current="page"
              class="item active"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
            <a
              class="item"
              href="/users"
              role="option"
            >
              <i
                aria-hidden="true"
                class="users icon"
              />
              Users
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <h3
        class="ui header"
      >
        Manage Developer Download Tokens
      </h3>
      <div
        class="ui basic segment"
      >
        Developer download tokens allow download of any file using the
         
        <code>
          ?token=
        </code>
         query parameter or passed in the Authorization header with a 
        <code>
          Token
        </code>
         prefix.
        <div
          class="ui warning message"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              Keep these tokens private!
            </div>
            <p>
              They will not be displayed again after being created.
            </p>
          </div>
        </div>
      </div>
      <div
        class="ui basic segment"
      >
        <div
          class="ui relaxed list"
          role="list"
        >
          <div
            class="item"
            role="listitem"
          >
            <img
              alt="John"
              class="ui avatar image"
              src="https://docs.atlassian.com/aui/8.3.1/docs/images/avatar-person.svg"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                my token 1
              </div>
              Created by 
              John
               
              <time
                datetime="2019-06-13T12:05:39.381Z"
                title="13 Jun 2019"
              >
                2 months from now
              </time>
            </div>
            <div
              class="right floated content"
            >
              <div
                class="ui action input"
              >
                <input
                  readonly=""
                  type="text"
                  value="blahtestingtokenstringhere"
                />
                <button
                  class="ui icon negative button"
                  data-testid="delete-token-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="item"
            role="listitem"
          >
            <img
              alt="John"
              class="ui avatar image"
              src="https://docs.atlassian.com/aui/8.3.1/docs/images/avatar-person.svg"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                my token 2
              </div>
              Created by 
              John
               
              <time
                datetime="2019-06-13T12:05:39.381Z"
                title="13 Jun 2019"
              >
                2 months from now
              </time>
            </div>
            <div
              class="right floated content"
            >
              <div
                class="ui action input"
              >
                <input
                  readonly=""
                  type="text"
                  value="test***********************"
                />
                <button
                  class="ui icon negative button"
                  data-testid="delete-token-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="item"
            role="listitem"
          >
            <img
              alt="unknown"
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                my token 3
              </div>
              <time
                datetime="2019-06-13T12:05:39.381Z"
                title="13 Jun 2019"
              >
                2 months from now
              </time>
            </div>
            <div
              class="right floated content"
            >
              <div
                class="ui action input"
              >
                <input
                  readonly=""
                  type="text"
                  value="test***********************"
                />
                <button
                  class="ui icon negative button"
                  data-testid="delete-token-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <h3
          class="ui header"
        >
          Make a new token
        </h3>
        <div
          class="ui segment"
        >
          <form
            class="ui form"
          >
            <div
              class="field"
            >
              <label>
                Name:
                <input
                  data-testid="token-name-input"
                  focus="false"
                  name="name"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <button
              class="ui disabled button"
              data-testid="token-create"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              Create
            </button>
            <div
              class="ui negative message"
            >
              <div
                class="content"
              >
                <p>
                  Network error: Failed to create new token
                </p>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders token list correctly - displaying look & hidden look 4`] = `
<body
  class="dimmable dimmed"
>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/configuration"
              role="option"
            >
              <i
                aria-hidden="true"
                class="settings icon"
              />
              Configuration
            </a>
            <a
              aria-current="page"
              class="item active"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
            <a
              class="item"
              href="/users"
              role="option"
            >
              <i
                aria-hidden="true"
                class="users icon"
              />
              Users
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <h3
        class="ui header"
      >
        Manage Developer Download Tokens
      </h3>
      <div
        class="ui basic segment"
      >
        Developer download tokens allow download of any file using the
         
        <code>
          ?token=
        </code>
         query parameter or passed in the Authorization header with a 
        <code>
          Token
        </code>
         prefix.
        <div
          class="ui warning message"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              Keep these tokens private!
            </div>
            <p>
              They will not be displayed again after being created.
            </p>
          </div>
        </div>
      </div>
      <div
        class="ui basic segment"
      >
        <div
          class="ui relaxed list"
          role="list"
        >
          <div
            class="item"
            role="listitem"
          >
            <img
              alt="John"
              class="ui avatar image"
              src="https://docs.atlassian.com/aui/8.3.1/docs/images/avatar-person.svg"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                my token 1
              </div>
              Created by 
              John
               
              <time
                datetime="2019-06-13T12:05:39.381Z"
                title="13 Jun 2019"
              >
                2 months from now
              </time>
            </div>
            <div
              class="right floated content"
            >
              <div
                class="ui action input"
              >
                <input
                  readonly=""
                  type="text"
                  value="blahtestingtokenstringhere"
                />
                <button
                  class="ui icon negative button"
                  data-testid="delete-token-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="item"
            role="listitem"
          >
            <img
              alt="John"
              class="ui avatar image"
              src="https://docs.atlassian.com/aui/8.3.1/docs/images/avatar-person.svg"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                my token 2
              </div>
              Created by 
              John
               
              <time
                datetime="2019-06-13T12:05:39.381Z"
                title="13 Jun 2019"
              >
                2 months from now
              </time>
            </div>
            <div
              class="right floated content"
            >
              <div
                class="ui action input"
              >
                <input
                  readonly=""
                  type="text"
                  value="test***********************"
                />
                <button
                  class="ui icon negative button"
                  data-testid="delete-token-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="item"
            role="listitem"
          >
            <img
              alt="unknown"
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                my token 3
              </div>
              <time
                datetime="2019-06-13T12:05:39.381Z"
                title="13 Jun 2019"
              >
                2 months from now
              </time>
            </div>
            <div
              class="right floated content"
            >
              <div
                class="ui action input"
              >
                <input
                  readonly=""
                  type="text"
                  value="test***********************"
                />
                <button
                  class="ui icon negative button"
                  data-testid="delete-token-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <h3
          class="ui header"
        >
          Make a new token
        </h3>
        <div
          class="ui segment"
        >
          <form
            class="ui form"
          >
            <div
              class="field"
            >
              <label>
                Name:
                <input
                  data-testid="token-name-input"
                  focus="false"
                  name="name"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <button
              class="ui disabled button"
              data-testid="token-create"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              Create
            </button>
            <div
              class="ui negative message"
            >
              <div
                class="content"
              >
                <p>
                  Network error: Failed to create new token
                </p>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui page modals dimmer transition visible active"
    style="display: flex;"
  >
    <div
      class="ui small modal transition visible active"
    >
      <div
        class="header"
      >
        Delete 'my token 1' token
      </div>
      <div
        class="content"
      >
        This will break any applications using this token. Are you sure?
      </div>
      <div
        class="actions"
      >
        <button
          class="ui button"
        >
          Cancel
        </button>
        <button
          class="ui negative primary button"
          data-testid="delete-token-confirm"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders token list correctly - displaying look & hidden look 5`] = `
<body
  class=""
>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
      <a
        class="item"
        href="/"
      >
        Investigator Studies
      </a>
      <a
        class="item"
        href="/research-studies"
      >
        Research Studies
      </a>
      <div
        class="right menu"
      >
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          Admin
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/configuration"
              role="option"
            >
              <i
                aria-hidden="true"
                class="settings icon"
              />
              Configuration
            </a>
            <a
              aria-current="page"
              class="item active"
              href="/tokens"
              role="option"
            >
              <i
                aria-hidden="true"
                class="key icon"
              />
              Developer Tokens
            </a>
            <a
              class="item"
              href="/cavatica-projects"
              role="option"
            >
              <i
                aria-hidden="true"
                class="folder open icon"
              />
              Cavatica Projects
            </a>
            <a
              class="item"
              href="/events"
              role="option"
            >
              <i
                aria-hidden="true"
                class="history icon"
              />
              Event Log
            </a>
            <a
              class="item"
              href="/users"
              role="option"
            >
              <i
                aria-hidden="true"
                class="users icon"
              />
              Users
            </a>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="ui dropdown link item"
          role="listbox"
          tabindex="0"
        >
          <img
            alt="bendolly"
            class="ui avatar image"
            src="https://lh3.googleusercontent.com/-7Agefge42sw/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3reWt8KI4nO_arpKCb4FzokaKnLgtg/mo/photo.jpg"
          />
          bendolly
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <a
              class="item"
              href="/profile"
              role="option"
            >
              <i
                aria-hidden="true"
                class="user icon"
              />
              Profile
            </a>
            <a
              class="item"
              href="/logout"
              role="option"
            >
              <i
                aria-hidden="true"
                class="log out icon"
              />
              Logout
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="page"
  >
    <div
      class="ui basic segment ui container"
    >
      <h3
        class="ui header"
      >
        Manage Developer Download Tokens
      </h3>
      <div
        class="ui basic segment"
      >
        Developer download tokens allow download of any file using the
         
        <code>
          ?token=
        </code>
         query parameter or passed in the Authorization header with a 
        <code>
          Token
        </code>
         prefix.
        <div
          class="ui warning message"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              Keep these tokens private!
            </div>
            <p>
              They will not be displayed again after being created.
            </p>
          </div>
        </div>
      </div>
      <div
        class="ui basic segment"
      >
        <div
          class="ui relaxed list"
          role="list"
        >
          <div
            class="item"
            role="listitem"
          >
            <img
              alt="John"
              class="ui avatar image"
              src="https://docs.atlassian.com/aui/8.3.1/docs/images/avatar-person.svg"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                my token 1
              </div>
              Created by 
              John
               
              <time
                datetime="2019-06-13T12:05:39.381Z"
                title="13 Jun 2019"
              >
                2 months from now
              </time>
            </div>
            <div
              class="right floated content"
            >
              <div
                class="ui action input"
              >
                <input
                  readonly=""
                  type="text"
                  value="blahtestingtokenstringhere"
                />
                <button
                  class="ui icon negative button"
                  data-testid="delete-token-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="item"
            role="listitem"
          >
            <img
              alt="John"
              class="ui avatar image"
              src="https://docs.atlassian.com/aui/8.3.1/docs/images/avatar-person.svg"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                my token 2
              </div>
              Created by 
              John
               
              <time
                datetime="2019-06-13T12:05:39.381Z"
                title="13 Jun 2019"
              >
                2 months from now
              </time>
            </div>
            <div
              class="right floated content"
            >
              <div
                class="ui action input"
              >
                <input
                  readonly=""
                  type="text"
                  value="test***********************"
                />
                <button
                  class="ui icon negative button"
                  data-testid="delete-token-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="item"
            role="listitem"
          >
            <img
              alt="unknown"
              class="ui avatar image"
              src="test-file-stub"
            />
            <div
              class="content"
            >
              <div
                class="header"
              >
                my token 3
              </div>
              <time
                datetime="2019-06-13T12:05:39.381Z"
                title="13 Jun 2019"
              >
                2 months from now
              </time>
            </div>
            <div
              class="right floated content"
            >
              <div
                class="ui action input"
              >
                <input
                  readonly=""
                  type="text"
                  value="test***********************"
                />
                <button
                  class="ui icon negative button"
                  data-testid="delete-token-button"
                >
                  <i
                    aria-hidden="true"
                    class="trash icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <h3
          class="ui header"
        >
          Make a new token
        </h3>
        <div
          class="ui segment"
        >
          <form
            class="ui form"
          >
            <div
              class="field"
            >
              <label>
                Name:
                <input
                  data-testid="token-name-input"
                  focus="false"
                  name="name"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <button
              class="ui disabled button"
              data-testid="token-create"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              Create
            </button>
            <div
              class="ui negative message"
            >
              <div
                class="content"
              >
                <p>
                  Network error: Failed to create new token
                </p>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ui segment footer"
  >
    <div
      class="ui container text-10"
    >
      <div
        class="ui horizontal list"
        role="list"
      >
        <div
          class="item"
          role="listitem"
        >
          <div
            class="ui basic horizontal label text-10"
          />
        </div>
        <div
          class="item"
          role="listitem"
        >
          UI
           
          <a
            href="https://github.com/kids-first/kf-ui-data-tracker/commit/undefined"
            rel="noopener noreferrer"
            target="_blank"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
